Rules were modularized for better maintainability: single_rules.drl, family_rules.drl, and ineligibility_rules.drl

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -3,4 +3,4 @@ mqtt.topic.id=1234
 mqtt.input.topic=test/
 mqtt.output.topic=test/
 
-rules.file.path=src/main/resources/rules/eligibility.drl
+rules.file.path=src/main/resources/rules/
