--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -3,4 +3,4 @@ mqtt.topic.id=af3054e0-27ff-428e-9531-72b88106039c
 mqtt.input.topic=BRE/calculateWinterSupplementInput/
 mqtt.output.topic=BRE/calculateWinterSupplementOutput/
 
-rules.file.path=src/main/resources/rules/eligibility.drl
+rules.file.path=src/main/resources/rules/
