--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,6 +1,6 @@
 mqtt.broker=tcp://localhost:1883
 mqtt.topic.id=1234
-mqtt.input.topic=test/
-mqtt.output.topic=test/
+mqtt.input.topic=test/input
+mqtt.output.topic=test/output
 
 rules.file.path=src/main/resources/rules/
