--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -1,6 +1,10 @@
 mqtt.broker=tcp://test.mosquitto.org:1883
 mqtt.topic.id=af3054e0-27ff-428e-9531-72b88106039c
-mqtt.input.topic=BRE/calculateWinterSupplementInput/
-mqtt.output.topic=BRE/calculateWinterSupplementOutput/
+mqtt.winter.input.topic=BRE/calculateWinterSupplementInput/
+mqtt.winter.output.topic=BRE/calculateWinterSupplementOutput/
+mqtt.summer.input.topic=BRE/calculateSummerSupplementInput/
+mqtt.summer.output.topic=BRE/calculateSummerSupplementOutput/
 
 rules.file.path=src/main/resources/rules/
+
+app.type=SUMMER
