--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,6 +1,9 @@
 mqtt.broker=tcp://localhost:1883
 mqtt.topic.id=1234
-mqtt.input.topic=test/input
-mqtt.output.topic=test/output
-
+mqtt.winter.input.topic=test/winterInput
+mqtt.winter.output.topic=test/winterOutput
+mqtt.summer.input.topic=test/summerInput
+mqtt.summer.output.topic=test/summerOutput
 rules.file.path=src/main/resources/rules/
+
+app.type=WINTER
