--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -1,10 +1,8 @@
 mqtt.broker=tcp://test.mosquitto.org:1883
-mqtt.topic.id=af3054e0-27ff-428e-9531-72b88106039c
-mqtt.winter.input.topic=BRE/calculateWinterSupplementInput/
-mqtt.winter.output.topic=BRE/calculateWinterSupplementOutput/
-mqtt.summer.input.topic=BRE/calculateSummerSupplementInput/
-mqtt.summer.output.topic=BRE/calculateSummerSupplementOutput/
+mqtt.topic.id=72b88106039c
+mqtt.winter.input.topic=RulesEngine/winterSupplementInput/
+mqtt.winter.output.topic=RulesEngine/winterSupplementOutput/
+mqtt.summer.input.topic=RulesEngine/summerSupplementInput/
+mqtt.summer.output.topic=RulesEngine/summerSupplementOutput/
 
 rules.file.path=src/main/resources/rules/
-
-app.type=SUMMER
